Removing CTA with css on mobile | Fix scrollytelling critical heights

--- a/src/components/sections/home/hero/hero.module.scss
+++ b/src/components/sections/home/hero/hero.module.scss
@@ -10,7 +10,7 @@
 
   .illustration {
     --illus-translate-x: 500px;
-    --illus-translate-y: -25px;
+    --illus-translate-y: -55px;
 
     position: absolute;
     right: 0;
@@ -71,6 +71,7 @@
       }
 
       .cta {
+        display: none;
         margin-top: 32px;
       }
     }
@@ -108,6 +109,7 @@
         }
 
         .cta {
+          display: block;
           margin-top: 40px;
         }
       }
